--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nuxt-newsletter": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-slider-component": "^3.2.24"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
