Added calendly widget

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "nuxt-calendly": "^0.1.18",
     "sass": "^1.75.0"
   }
 }
