--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "^2.12.1",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
+    "nuxt-gtag": "^2.0.6",
     "nuxt-newsletter": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
