--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.12.1",
+    "@nuxtjs/sitemap": "^5.2.0",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
     "nuxt-gtag": "^2.0.6",
