npm update + added hotjar

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@nuxtjs/sitemap": "^5.2.0",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
-    "nuxt-gtag": "^2.0.6",
+    "nuxt-module-hotjar": "^1.2.6",
     "nuxt-newsletter": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
