--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "nuxt-newsletter": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vue-slider-component": "^3.2.24",
-    "vue3-carousel-nuxt": "^1.1.1"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
