--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/sitemap": "^5.2.0",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
+    "nuxt-gtag": "^2.0.6",
     "nuxt-highcharts": "^3.1.1",
     "nuxt-module-hotjar": "^1.2.6",
     "nuxt-newsletter": "^0.2.0",
