--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.12.1",
+    "@nuxt/fonts": "^0.7.1",
     "@nuxtjs/robots": "^3.0.0",
     "@nuxtjs/sitemap": "^5.2.0",
     "@pinia/nuxt": "^0.5.1",
