--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pinia": "^2.1.7",
     "three": "^0.182.0",
     "three-stdlib": "^2.36.1",
+    "v-gsap-nuxt": "^1.4.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
