--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "nuxt": "^3.11.2",
     "nuxt-gtag": "^2.0.6",
     "nuxt-highcharts": "^3.1.1",
+    "nuxt-lenis": "^2.1.2",
     "nuxt-module-hotjar": "^1.2.6",
     "nuxt-newsletter": "^0.2.0",
     "pinia": "^2.1.7",
+    "resend": "^6.7.0",
+    "shiki": "^3.21.0",
     "three": "^0.182.0",
     "three-stdlib": "^2.36.1",
-    "v-gsap-nuxt": "^1.4.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
