--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@netlify/functions": "^5.1.2",
     "@nuxt/content": "^2.12.1",
     "@nuxt/fonts": "^0.7.1",
     "@nuxtjs/robots": "^3.0.0",
